changing the forecasting front and logic